front: fix items alignement in stdcm card

--- a/front/src/styles/scss/applications/stdcmV2/_card.scss
+++ b/front/src/styles/scss/applications/stdcmV2/_card.scss
@@ -61,39 +61,124 @@
   }
 
   .stdcm-v2-card__body {
-    padding: 0.688rem 1rem 0.8125rem 1.5rem;
-    // TODO: remove this style after ui-core component is implemented
-    .suggestions * label,
-    .stdcm-v2-via-stop-for * label {
+    padding: 0.875rem 1.5rem 1.5rem 0.5rem;
+
+    .location-line {
+      padding-left: 1rem;
+      display: flex;
+
+      .ci-input {
+        padding-inline: 0 0.625rem;
+      }
+    }
+
+    // Fix osrd-ui styles
+    label {
       margin-bottom: 0;
     }
 
     .feed-back {
-      padding-right: 0.3rem;
-      padding-left: 0;
+      padding: 0;
     }
 
-    .selector {
-      padding-inline: 0.188rem 0.25rem;
+    .date-picker {
+      .feed-back {
+        padding-inline: 1rem 0.625rem;
+      }
     }
 
-    .stop-time {
-      padding-left: 0.125rem;
-      padding: 0.375rem 0.3rem 0.625rem 0rem;
-      padding-left: 0rem;
-      padding-right: 0rem;
+    .time-picker {
+      .feed-back {
+        padding-right: 0.625rem;
+        width: 7.5rem;
+      }
     }
 
-    .suggestions-list {
-      width: 99%;
-      left: 0;
+    .tolerance-picker {
+      .feed-back {
+        width: 7.5rem;
+      }
+    }
+
+    .combo-box {
+      .suggestions-list {
+        width: 99%;
+        left: 0;
+        margin-top: 1rem;
+      }
+    }
+
+    // cards styles
+    &.consist {
+      padding-left: 1.5rem;
+      padding-bottom: 0.5rem;
+
+      .stdcm-v2-consist__properties {
+        display: flex;
+        justify-content: space-between;
+        padding-block: 0.6875rem;
+
+        .weight {
+          width: 7.4375rem;
+        }
+
+        .length {
+          width: 7.9375rem;
+        }
+
+        * > .base-label-wrapper > label {
+          margin-bottom: 0;
+        }
+      }
+
+      .speed-limit-by-tag-selector {
+        padding-right: 0.1875rem;
+      }
+    }
+
+    &.extremity {
+      padding-bottom: 1.5rem;
+
+      .arrival-type-select {
+        padding: 2.125rem 0 0 1rem;
+      }
+
+      .schedule {
+        display: flex;
+        flex-direction: row;
+        padding-top: 1rem;
+      }
+    }
+
+    &.via {
+      padding-right: 0.5rem;
+      padding-bottom: 0.8125rem;
+
+      .location-line {
+        padding-right: 1rem;
+      }
+
+      .stop-type-selector {
+        padding: 0.8125rem 1rem;
+      }
+
+      .stop-time {
+        .feed-back {
+          padding: 0 1rem 0.8125rem 1rem;
+        }
+      }
+    }
+
+    &.add-via {
+      padding: 0.6875rem 1.5rem 0.8125rem 0.75rem;
     }
 
     .stdcm-v2-default-card-button {
-      color: rgba(24, 68, 239, 1);
-      line-height: 24px;
+      color: var(--primary60);
+      line-height: 1.5rem;
       margin-left: 0.75rem;
     }
+
     button:focus {
       outline: none;
     }
@@ -118,15 +203,9 @@
     button {
       display: contents;
       font-size: 1rem;
-      font-weight: 500;
+      font-weight: 600;
       cursor: pointer;
-      color: #256afa;
+      color: var(--primary60);
     }
-  }
-}
-
-.stdcm-v2-card:last-of-type {
-  .stdcm-v2-card__body {
-    padding-bottom: 0.75rem;
   }
 }
